--- a/src/sass/theme/_theme.scss
+++ b/src/sass/theme/_theme.scss
@@ -310,6 +310,7 @@ p, .sub-topic ul, .sub-topic ol, .entry-content ul, .entry-content ol, .topic-ro
   background-image: linear-gradient($yellow,$yellow);
   background-size: 0 100%;
   background-repeat: no-repeat;
+  display: flex;
 }
 
 .topic-list a:hover, .resource-links a:hover, .sub-topic-list a:hover, a.post-link:hover{
